# golem-component-service/src/api/component.rs
@@ -13,7 +13,8 @@
 // limitations under the License.
 
 use futures_util::TryStreamExt;
-use golem_common::model::{ComponentId, ComponentType};
+use golem_common::model::{ComponentId, ComponentType, InitialComponentFilePathAndPermissionsList};
+use golem_component_service_base::model::InitialComponentFilesArchiveAndPermissions;
 use golem_component_service_base::service::component::{
     ComponentError as ComponentServiceError, ComponentService,
 };
@@ -63,11 +64,24 @@ impl TraceErrorKind for ComponentError {
 }
 
 #[derive(Multipart)]
+#[oai(rename_all = "camelCase")]
 pub struct UploadPayload {
     name: ComponentName,
     component_type: Option<ComponentType>,
     component: Upload,
+    files_permissions: Option<InitialComponentFilePathAndPermissionsList>,
+    files: Option<Upload>,
 }
+
+#[derive(Multipart)]
+#[oai(rename_all = "camelCase")]
+pub struct UpdatePayload {
+    component_type: Option<ComponentType>,
+    component: Upload,
+    files_permissions: Option<InitialComponentFilePathAndPermissionsList>,
+    files: Option<Upload>,
+}
+
 
 type Result<T> = std::result::Result<T, ComponentError>;
 
@@ -115,6 +129,16 @@ impl From<ComponentServiceError> for ComponentError {
                     error: error.to_safe_string(),
                 }))
             }
+            ComponentServiceError::MalformedComponentArchiveError { .. } => {
+                ComponentError::BadRequest(Json(ErrorsBody {
+                    errors: vec![error.to_safe_string()],
+                }))
+            }
+            ComponentServiceError::UploadInitialComponentFilesError { .. } => {
+                ComponentError::InternalError(Json(ErrorBody {
+                    error: error.to_safe_string(),
+                }))
+            }
         }
     }
 }
@@ -155,6 +179,12 @@ impl ComponentApi {
         );
         let response = {
             let data = payload.component.into_vec().await?;
+            let files_file = payload.files.map(|f| f.into_file());
+
+            let files = files_file
+                .zip(payload.files_permissions)
+                .map(|(archive, permissions)| InitialComponentFilesArchiveAndPermissions { archive, permissions });
+
             let component_name = payload.name;
             self.component_service
                 .create(
@@ -162,6 +192,7 @@ impl ComponentApi {
                     &component_name,
                     payload.component_type.unwrap_or(ComponentType::Durable),
                     data,
+                    files,
                     &DefaultNamespace::default(),
                 )
                 .instrument(record.span.clone())
@@ -176,9 +207,9 @@ impl ComponentApi {
     #[oai(
         path = "/:component_id/upload",
         method = "put",
-        operation_id = "update_component"
+        operation_id = "upload_component"
     )]
-    async fn update_component(
+    async fn upload_component(
         &self,
         component_id: Path<ComponentId>,
         wasm: Binary<Body>,
@@ -188,9 +219,10 @@ impl ComponentApi {
         component_type: Query<Option<ComponentType>>,
     ) -> Result<Json<Component>> {
         let record = recorded_http_api_request!(
-            "update_component",
+            "upload_component",
             component_id = component_id.0.to_string()
         );
+
         let response = {
             let data = wasm.0.into_vec().await?;
             self.component_service
@@ -198,6 +230,46 @@ impl ComponentApi {
                     &component_id.0,
                     data,
                     component_type.0,
+                    None,
+                    &DefaultNamespace::default(),
+                )
+                .instrument(record.span.clone())
+                .await
+                .map_err(|e| e.into())
+                .map(|response| Json(response.into()))
+        };
+        record.result(response)
+    }
+
+    /// Update a component
+    #[oai(
+        path = "/:component_id/updates",
+        method = "post",
+        operation_id = "update_component"
+    )]
+    async fn update_component(
+        &self,
+        component_id: Path<ComponentId>,
+        payload: UpdatePayload
+    ) -> Result<Json<Component>> {
+        let record = recorded_http_api_request!(
+            "update_component",
+            component_id = component_id.0.to_string()
+        );
+        let response = {
+            let data = payload.component.into_vec().await?;
+            let files_file = payload.files.map(|f| f.into_file());
+
+            let files = files_file
+                .zip(payload.files_permissions)
+                .map(|(archive, permissions)| InitialComponentFilesArchiveAndPermissions { archive, permissions });
+
+            self.component_service
+                .update(
+                    &component_id.0,
+                    data,
+                    payload.component_type,
+                    files,
                     &DefaultNamespace::default(),
                 )
                 .instrument(record.span.clone())
